--- a/Personal Blog Website/css/style.css
+++ b/Personal Blog Website/css/style.css
@@ -14,34 +14,48 @@ body {
 }
 
 header {
-    background-color: blue;
     grid-area: header;
     text-align: center;
+}
+
+#blog-title h1 {
+    margin-block-start: 0.5em;
+    margin-block-end: 0.5em;
 }
 
 #categories-bar {
     display: flex;
     justify-content: space-evenly;
-    border: 1px solid black;
+    border-top: 1px solid rgb(182, 182, 182);
+    border-bottom: 1px solid rgb(182, 182, 182);
+    margin-left: 7%;
+    margin-right: 7%;
+}
+
+.category p {
+    margin-block-start: 0.5em;
+    margin-block-end: 0.5em;
 }
 
 #post-cards {
-    background-color: red;
     grid-area: content;
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr;
-    padding: 2%;
 }
 
 .card {
-    border: 1px solid black;
-    padding: 2%;
-    margin: 2%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    border: 1px solid rgb(138, 138, 138);
+    background-color: rgb(241, 241, 241);
+    padding: 5%;
+    margin: 6% 7% 0% 7%;
 }
 
 .date {
-    margin-top: 1px;
+    margin-top: 7px;
     margin-bottom: 1px;
     font-size: 0.7em;
     letter-spacing: 2px;
@@ -59,31 +73,53 @@ header {
 
 .blog-card-text {
     margin-top: 1px;
-    margin-bottom: 1px;
+    margin-bottom: 13px;
     margin-top: 7px;
 }
 
 .read-button {
-    background-color: grey;
-    border: 1px solid black;
-    padding: 1%;
-    margin-top: 10px;
-    width: 100px;
-    padding: 7px;
-    text-align: center;
+    background-color: #222;
+    color: white;
+    text-align: left;
+    padding: 5px;
     font: lighter 7px;
     letter-spacing: 1px;
+    text-decoration: none;
 }
 
-.about {
-    background-color: yellow;
+.sidebar {
+    border-left: 1px solid rgb(182, 182, 182);
     grid-area: about;
+    margin-top: 14%;
+    margin-bottom: 7%;
+    text-align: center;
+}
+
+.sidebar h2 {
+    margin-block-start: 0.5em;
+    margin-block-end: 0.2em;
+}
+
+.sidebar p {
+    margin-block-start: 0.5em;
+    margin-block-end: 0.5em;
 }
 
 footer {
-    background-color: green;
     grid-area: footer;
+    background-color: rgb(175, 175, 175);
+    margin-top: 10px;
+    padding-top: 15px;
+    padding-bottom: 20px;
+    text-align: center;
+    font-size: 12px;
 }
+
+@media screen and (max-width: 500px) {
+    .sidebar {
+      /*visibility: hidden;*/
+    }
+  }
 
 /* Large Screens */
 
@@ -95,7 +131,6 @@ footer {
         grid-template-areas: "header header header header" "content content content about" "footer footer footer footer";
     }
     #post-cards {
-        background-color: red;
         grid-area: content;
         display: grid;
         grid-template-columns: 1fr 1fr;
