Update README, fix event listeners, and add nav items active state

--- a/Project 2 - Dynamic Landing Page/css/styles.css
+++ b/Project 2 - Dynamic Landing Page/css/styles.css
@@ -107,6 +107,11 @@ section {
     transition: ease 0.3s all;
 }
 
+.active-nav .menu__link {
+    color: #fff;
+    background: #333;
+}
+
 /* Header Styles */
 .page__header {
     background: #fff;
