--- a/Project 4 - Evaluate News Article with NLP/src/client/styles/form.scss
+++ b/Project 4 - Evaluate News Article with NLP/src/client/styles/form.scss
@@ -2,11 +2,16 @@ form {
     border: 1px solid #545454;
     border-radius: 3px;
     padding: 40px;
+    margin: 40px;
+    background-color: white;
 }
 
 input {
-    padding: 5px 20px;
-    width: 100%;
     line-height: 16px;
-    margin: 10px 0;
+    width: 100%;
+    margin: 10px;
+}
+
+.formResultsTitle {
+    text-align: center;
 }
