--- a/Project 4 - Evaluate News Article with NLP/src/client/styles/header.scss
+++ b/Project 4 - Evaluate News Article with NLP/src/client/styles/header.scss
@@ -1,5 +1,14 @@
 header {
-    display: flex;
-    justify-content: space-between;
     padding: 10px 40px;
+    text-align: center;
+
+    .title {
+        font-weight: bold;
+        font-size: 2em;
+        margin: 20px 0 10px;
+    }
+
+    .subTitle {
+        font-style: italic;
+    }
 }
