--- a/Project 4 - Evaluate News Article with NLP/src/client/styles/form.scss
+++ b/Project 4 - Evaluate News Article with NLP/src/client/styles/form.scss
@@ -2,7 +2,7 @@ form {
     border: 1px solid #545454;
     border-radius: 3px;
     padding: 40px;
-    margin: 40px;
+    margin: 40px 20% 40px 20%;
     background-color: white;
 }
 
