Fix service workers

--- a/Project 4 - Evaluate News Article with NLP/src/client/views/index.html
+++ b/Project 4 - Evaluate News Article with NLP/src/client/views/index.html
@@ -58,7 +58,15 @@
     <footer>
         <p>Data from <a href="https://docs.aylien.com/" target="_blank">Aylien API</a></p>
     </footer>
-
+    <script>
+        // Check that service workers are supported
+        if ('serviceWorker' in navigator) {
+            // Use the window load event to keep the page load performant
+            window.addEventListener('load', () => {
+                navigator.serviceWorker.register('/service-worker.js');
+            });
+        }
+    </script>
 </body>
 
 </html>
