Fix image loader

--- a/Project 5 - Travel App/src/client/views/index.html
+++ b/Project 5 - Travel App/src/client/views/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Travel App</title>
-    <meta name="description" content="A travel application" />
-  </head>
-  <body>
-    <p>Text</p>
-  </body>
+<html lang="en" dir="ltr">
+
+<head>
+  <meta charset="utf-8" />
+  <title>Travel App</title>
+  <meta name="description" content="A travel application" />
+</head>
+<body>
+  <img id="headerImage">
+  <p>Text</p>
+</body>
+
 </html>
