--- a/Project 5 - Travel App/src/client/styles/result.scss
+++ b/Project 5 - Travel App/src/client/styles/result.scss
@@ -90,6 +90,10 @@
     font-size: 1em;
 }
 
+.submitButtonResult:hover {
+    background-color: rgb(82, 39, 169);
+}
+
 .newSearch {
     text-align: center;
 }
@@ -105,4 +109,8 @@
     border-radius: 5px;
     font-weight: bold;
     letter-spacing: 1px;
+}
+
+#newSearchButton:hover {
+    background-color: rgb(82, 39, 169);
 }
