Add pixabay API and updateUI function

--- a/Project 5 - Travel App/src/client/styles/tripTiles.scss
+++ b/Project 5 - Travel App/src/client/styles/tripTiles.scss
@@ -1,3 +1,7 @@
+#myTripsHeader {
+    text-align: center;
+}
+
 .tripTiles {
     display: grid;
     grid-template-columns: 1fr;
@@ -24,4 +28,8 @@
 
 .trip:hover {
     background-color:rgb(138, 97, 222);
+}
+
+#myTrips {
+    display: none;
 }
