--- a/Project 5 - Travel App/src/client/views/index.html
+++ b/Project 5 - Travel App/src/client/views/index.html
@@ -14,8 +14,8 @@
       <h1 id="headerTitle">Travel Planner</h1>
     </header>
 
-    <section class="addTrip">
-      <h2>Add Trip</h2>
+    <section id="addTrip">
+      <h2 id="addTripTitle">Add Trip</h2>
       <form class="form">
         <input id="where" type="text" name="input" value="" placeholder="Destination" required>
         <label for="arrivalDate">Arrival Date</label>
@@ -26,23 +26,23 @@
       </form>
     </section>
 
-    <section class="result">
+    <section id="result">
       <div class="resultInfo">
         <img id="resultImg" src="../img/map.jpg">
         <div class="resultHeader">
           <h3 id="locationName">Location</h3>
-          <p id="length">y day trip</p>
-          <p id="countDown">x days away</p>
+          <p id="length">Length</p>
+          <p id="countDown">Countdown</p>
         </div>
         <div class="details">
           <p id="arrivalTitle">Arrival</p>
           <p id="departureTitle">Departure</p>
-          <p id="arrivalResult">05/03/2020</p>
-          <p id="departureResult">20/05/2020</p>
+          <p id="arrivalResult">Arrival Date</p>
+          <p id="departureResult">Departure Date</p>
         </div>
         <div class="weather">
           <p id="weatherTitle">Typical Weather</p>
-          <p id="weatherDetails">Weather weather weather weather</p>
+          <p id="weatherDetails">Weather</p>
         </div>
         <div class="submitButtons">
           <input class="submitButtonResult" id="save" type="submit" name="" value="Save">
@@ -54,8 +54,8 @@
       </div>
     </section>
 
-    <section class="myTrips">
-      <h2>My Trips</h2>
+    <section id="myTrips">
+      <h2 id="myTripsHeader">My Trips</h2>
       <div class="tripTiles">
         <div class="trip" id="trip1">
           <img class="tripImg" id="tripImg1" src="../img/map.jpg">
