--- a/Project 5 - Travel App/src/client/styles/main.scss
+++ b/Project 5 - Travel App/src/client/styles/main.scss
@@ -22,12 +22,9 @@ header {
     }
 }
 
-.addTrip,
-.myTrips {
-    h2 {
-        font-size: 1.5em;
-        text-align: center;
-    }
+#addTripTitle {
+    font-size: 1.5em;
+    text-align: center;
 }
 
 .addTrip {
