--- a/Project 5 - Travel App/src/client/styles/result.scss
+++ b/Project 5 - Travel App/src/client/styles/result.scss
@@ -1,3 +1,7 @@
+#result {
+    display: none;
+}
+
 .resultInfo {
     background-color: rgb(152, 135, 197);
     margin: 35px 5% 15px 5%;
@@ -11,7 +15,7 @@
 
 .resultHeader {
     background-color: rgb(110, 69, 192);
-    padding: 10px 0 10px 0;
+    padding: 10px 10px 10px 10px;
     margin-top: -5px;
 }
 
@@ -19,14 +23,14 @@
     text-align: center;
     font-size: 1.5em;
     margin-block-start: 0;
-    margin-block-end: 0;
+    margin-block-end: 5px;
 }
 
 #length {
     font-size: 1.1em;
     text-align: center;
     margin-block-start: 0;
-    margin-block-end: 0;
+    margin-block-end: 3px;
 }
 
 #countDown {
