Add tests and update README

--- a/Project 5 - Travel App/src/client/views/index.html
+++ b/Project 5 - Travel App/src/client/views/index.html
@@ -18,11 +18,13 @@
       <h2 id="addTripTitle">Add Trip</h2>
       <form class="form">
         <input id="where" type="text" name="input" value="" placeholder="Destination" required>
-        <label for="arrivalDate">Arrival Date</label>
+        <label for="arrivalDate">Destination Arrival Date</label>
         <input id="arrivalDate" type="date" name="input" value="" placeholder="Arrival date" required>
-        <label for="departureDate">Departure Date</label>
+        <label for="departureDate">Destination Departure Date</label>
         <input id="departureDate" type="date" name="input" value="" placeholder="Departure date" required>
-        <input id="submitButton" type="submit" name="" value="Submit">
+        <div class="buttonDiv">
+          <input id="submitButton" type="submit" name="" value="Submit">
+        </div>
       </form>
     </section>
 
