--- a/Project 5 - Travel App/src/client/styles/main.scss
+++ b/Project 5 - Travel App/src/client/styles/main.scss
@@ -11,6 +11,13 @@ section {
     margin: 0 10% 0 10%;
 }
 
+#addTrip {
+    h2 {
+        margin-top: 30px;
+        text-align: center;
+    }
+}
+
 header {
     background-color: rgb(67, 24, 152);
     h1 {
@@ -24,24 +31,15 @@ header {
 
 #addTripTitle {
     font-size: 1.5em;
-    text-align: center;
-}
-
-.addTrip {
-    padding: 0 10% 5% 10%;
-
-    h2 {
-        margin-top: 30px;
-    }
 }
 
 form {
-    display: flex;
-    flex-direction: column;
+    display: grid;
     width: 100%;
+    margin: 0 auto;
+    max-width: 600px;
 
     input {
-        align-self: center;
         line-height: 16px;
         width: 100%;
         margin: 0 0 25px 0;
@@ -58,15 +56,18 @@ form {
     }
 }
 
+.buttonDiv {
+    text-align: center;
+}
+
 #submitButton {
-    width: 50%;
+    max-width: 200px;
     padding: 20px;
-    align-self: center;
-    background-color: rgb(67, 24, 152);
+    background-color: rgb(143, 24, 152);
     color: white;
     border-radius: 25px;
 }
 
 #submitButton:hover {
-    background-color: rgb(82, 39, 169);
+    background-color: rgb(162, 31, 171);
 }
