--- a/Project 5 - Travel App/src/client/styles/result.scss
+++ b/Project 5 - Travel App/src/client/styles/result.scss
@@ -1,11 +1,14 @@
 #result {
     display: none;
+    text-align: center;
 }
 
 .resultInfo {
+    display: inline-block;
     background-color: rgb(152, 135, 197);
     margin: 35px 5% 15px 5%;
     border-radius: 25px;
+    max-width: 600px;
 }
 
 #resultImg {
@@ -103,18 +106,19 @@
 }
 
 #newSearchButton {
-    margin: 10px;
+    margin: 10px 10px 20px 10px;
     width: 45%;
     padding: 8px;
     align-self: center;
-    background-color: rgb(110, 69, 192);
-    border-color: rgb(67, 24, 152);
+    background-color: rgb(143, 24, 152);
+    border-color: rgb(143, 24, 152);
     font-size: 0.8em;
     border-radius: 5px;
     font-weight: bold;
     letter-spacing: 1px;
+    color: white;
 }
 
 #newSearchButton:hover {
-    background-color: rgb(82, 39, 169);
+    background-color:  rgb(162, 31, 171);
 }
