Add save feature

--- a/Project 5 - Travel App/src/client/views/index.html
+++ b/Project 5 - Travel App/src/client/views/index.html
@@ -32,7 +32,8 @@
       <div class="resultInfo">
         <img id="resultImg" src="../img/map.jpg">
         <div class="resultHeader">
-          <h3 id="locationName">Location</h3>
+          <h3 id="location">Location</h3>
+          <h3 id="country">Country</h3>
           <p id="length">Length</p>
           <p id="countDown">Countdown</p>
         </div>
@@ -58,19 +59,7 @@
 
     <section id="myTrips">
       <h2 id="myTripsHeader">My Trips</h2>
-      <div class="tripTiles">
-        <div class="trip" id="trip1">
-          <img class="tripImg" id="tripImg1" src="../img/map.jpg">
-          <h3 class="tripTitle">Trip 1</h3>
-        </div>
-        <div class="trip" id="trip2">
-          <img class="tripImg" id="tripImg2" src="../img/map.jpg">
-          <h3 class="tripTitle">Trip 2</h3>
-        </div>
-        <div class="trip" id="trip3">
-          <img class="tripImg" id="tripImg3" src="../img/map.jpg">
-          <h3 class="tripTitle">Trip 3</h3>
-        </div>
+      <div id="tripTiles">
       </div>
     </section>
   </div>
