--- a/Project 5 - Travel App/src/client/styles/result.scss
+++ b/Project 5 - Travel App/src/client/styles/result.scss
@@ -22,11 +22,18 @@
     margin-top: -5px;
 }
 
-#locationName {
+#location {
     text-align: center;
     font-size: 1.5em;
     margin-block-start: 0;
-    margin-block-end: 5px;
+    margin-block-end: 0;
+}
+
+#country {
+    text-align: center;
+    font-size: 1.2em;
+    margin-block-start: 0;
+    margin-block-end: 7px;
 }
 
 #length {
