--- a/Project 5 - Travel App/src/client/styles/tripTiles.scss
+++ b/Project 5 - Travel App/src/client/styles/tripTiles.scss
@@ -13,6 +13,13 @@
     border-radius: 25px 25px 0 0;
 }
 
+.tripImg:hover {
+    opacity: 0.8;
+    transition: opacity 1s ease-in-out;
+    -moz-transition: opacity 1s ease-in-out;
+    -webkit-transition: opacity 1s ease-in-out;
+}
+
 .trip {
     display: flex;
     flex-direction: column;
@@ -21,15 +28,26 @@
     border-radius: 25px;
 }
 
-.tripTitle {
+.savedDescription {
     text-align: center;
     font-size: 1em;
+    margin-bottom: 10px;
+    margin-top: 10px;
+
+    h3 {
+        margin-block-end: 0;
+        margin-block-start: 0;
+    }
+}
+
+.tripDates {
+    text-align: center;
+    margin-block-start: 0;
 }
 
 .trip:hover {
-    background-color:rgb(138, 97, 222);
-}
-
-#myTrips {
-    display: none;
+    background-color: rgb(138, 97, 222);
+    transition: opacity 1s ease-in-out;
+    -moz-transition: opacity 1s ease-in-out;
+    -webkit-transition: opacity 1s ease-in-out;
 }
