--- a/Project 5 - Travel App/src/client/views/index.html
+++ b/Project 5 - Travel App/src/client/views/index.html
@@ -34,8 +34,16 @@
         <div class="resultHeader">
           <h3 id="location">Location</h3>
           <h3 id="country">Country</h3>
-          <p id="length">Length</p>
-          <p id="countDown">Countdown</p>
+          <div class="lengthDiv">
+            <p id="lengthText">Trip Length:</p>
+            <p id="lengthNumber">#</p>
+            <p id="lengthDays">days</p>
+          </div>
+          <div class="countDiv">
+            <p id="countDownNumber">#</p>
+            <p id="countDownDays">days</p>
+            <p id="countDown">away</p>
+          </div>
         </div>
         <div class="details">
           <p id="arrivalTitle">Arrival</p>
@@ -55,13 +63,14 @@
           <input id="newSearchButton" type="submit" name="" value="New Search">
         </div>
       </div>
-    </section>
+  </div>
+  </section>
 
-    <section id="myTrips">
-      <h2 id="myTripsHeader">My Trips</h2>
-      <div id="tripTiles">
-      </div>
-    </section>
+  <section id="myTrips">
+    <h2 id="myTripsHeader">My Trips</h2>
+    <div id="tripTiles">
+    </div>
+  </section>
   </div>
 </body>
 
