--- a/Project 5 - Travel App/src/client/styles/main.scss
+++ b/Project 5 - Travel App/src/client/styles/main.scss
@@ -41,8 +41,7 @@ form {
 
     input {
         line-height: 16px;
-        width: 100%;
-        margin: 0 0 25px 0;
+        margin: 0 10% 25px 10%;
         padding: 10px;
         font-size: 1.1em;
         border: 1px solid grey;
@@ -51,7 +50,7 @@ form {
 
     label {
         font-size: 1.2em;
-        margin-bottom: 10px;
+        margin: 0 10% 10px 10%;
         font-weight: bold;
     }
 }
