--- a/Project 5 - Travel App/src/client/views/index.html
+++ b/Project 5 - Travel App/src/client/views/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <title>Travel App</title>
-  <meta name="description" content="A travel application" />
+  <meta name="description" content="Travel planner application" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -65,7 +65,6 @@
       </div>
   </div>
   </section>
-
   <section id="myTrips">
     <h2 id="myTripsHeader">My Trips</h2>
     <div id="tripTiles">
